--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 		<h1>Today's Forecast</h1>
 
 		<div class="input">
-		<input type="text" class="inputValue" name="" placeholder="City Name" value=" ">
+		<input type="text" name="" placeholder="Enter Zipcode" value="">
 		<button type="button" name="button">Search</button>
 		</div>
 
